<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="280dp"
        android:layout_height="156dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="156dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_required"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_bold"
                android:textSize="14sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_will_do_a_deep"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_regular"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grant"
                    android:textColor="#409AD7"
                    android:textSize="14sp"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/inter_bold"
                    android:id="@+id/txt_grant"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deny"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_toLeftOf="@+id/txt_grant"
                    android:layout_marginRight="24dp"
                    android:fontFamily="@font/inter_regular"
                    android:id="@+id/txt_deny"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>