<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Activity.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ScrollView
                android:layout_width="match_parent"
                android:background="@drawable/bgr_home"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/img_menu"
                            android:src="@drawable/ic_menu"
                            android:padding="10dp"/>

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_star"
                            android:padding="10dp"
                            android:id="@+id/imageViewStar"
                            android:layout_alignParentRight="true"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="25sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/font"
                        android:layout_gravity="center_horizontal"/>

                    <ViewFlipper
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:id="@+id/viewflipper"
                        android:background="@color/white"/>

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="4dp"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/layout_indiacator"
                        android:background="@drawable/bgr_indiviewfliper"
                        android:layout_below="@+id/viewflipper"
                        android:weightSum="4"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/ic_sl_indiviewfliper"
                            android:id="@+id/img_indiviewfliper1"
                            android:background="@drawable/bgr_indiviewfliper"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/img_indiviewfliper2"
                            android:background="@drawable/bgr_indiviewfliper"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/img_indiviewfliper3"
                            android:background="@drawable/bgr_indiviewfliper"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/img_indiviewfliper4"
                            android:layout_weight="1"
                            android:background="@drawable/bgr_indiviewfliper"/>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/img_camera"
                        android:id="@+id/relative_layout_edit_camera"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/camera"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="5dp"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/inter_bold"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="30dp"
                        android:weightSum="3">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:id="@+id/relative_layout_edit_collage"
                            android:background="@drawable/img_collage">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/collage"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="5dp"
                                android:textSize="16sp"
                                android:textColor="@color/black"
                                android:fontFamily="@font/inter_bold"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginRight="5dp"
                            android:layout_marginLeft="5dp"
                            android:id="@+id/relative_layout_edit_photo"
                            android:background="@drawable/img_edit">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/edit"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="5dp"
                                android:textSize="16sp"
                                android:textColor="@color/black"
                                android:fontFamily="@font/inter_bold"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/layout_draft"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/img_history" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/history"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="5dp"
                                android:textSize="16sp"
                                android:textColor="@color/black"
                                android:fontFamily="@font/inter_bold"/>

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>